2020-09-update: Step-save: most refactoring done, fixing wiring tests